# educonnect-platform

./: .dockerignore  .env.example  .eslintrc.js  .gitignore  .prettierignore  AGENT-QUICKSTART.md  AGENTS.md  CLAUDE.md  CODE_REVIEW_FIXES.md  DEPENDENCIES.md  DEPLOYMENT_GUIDE.md  Dockerfile.backend  Dockerfile.python  MANUAL_TESTING_GUIDE.md  MVP_plan.md  ORCHESTRATION_SUMMARY.md  ORCHESTRATOR-QUICKSTART.md  ORCHESTRATOR.md  PHASE1-GROUP-A-STATUS.md  PHASE1-GROUP-B-SUMMARY.md  PHASE1-GROUP-C-IMPLEMENTATION.md  PHASE1-GROUP-C-SUMMARY.md  PHASE1-GROUP-D-SUMMARY.md  PHASE1-GROUP-E-SUMMARY.md  PHASE2-GROUP-E-STATUS.md  PHASE2-GROUP-F-STATUS.md  QUICKSTART-PHASE1-B.md  README.md  ROADMAP.md  RUN_TESTS.md  SECURITY.md  SECURITY_AUDIT_REPORT.md  SETUP.md  TASKS-PHASE3-4.md  TASKS.md  TEST_IMPLEMENTATION_STATUS.md  TEST_RESULTS.md  check-orchestrator-status.sh  claude.md  design_decisions.md  (+12 more)
.claude/commands/: api.md  architect.md  database.md  devops.md  docs.md  review.md  security-quick.md  security-review.md  security-scan.md
.github/workflows/: ci.yml  deploy.yml
.venv-format/: pyvenv.cfg
educonnect-venv/: pyvenv.cfg
openspec/: project.md
openspec/agents/: api-designer.md  code-reviewer.md  database-architect.md  devops-infrastructure.md  security-auditor.md  solution-architect.md  technical-writer.md
orchestrator/: .gitignore  QUICKSTART.md  README.md  SUMMARY.md  example_run.sh  logs.md  pyproject.toml  requirements.txt  setup.sh
orchestrator/config/: phases.yaml
orchestrator/orchestrator/: __init__.py  cli.py  config.py  executor.py  reporter.py
orchestrator/orchestrator/handlers/: __init__.py  base.py  config_edit.py  file_generation.py  manual.py  test_generation.py
python-services/: .flake8  conftest.py  pyproject.toml  pytest.ini
python-services/analytics/: main.py
python-services/checkpoint/: main.py
python-services/fixtures/: common.py
python-services/matching/: main.py  matching_algorithm.py  test_matching_manual.py  test_server.py
src/: app.ts  index.ts
status/: completed_tasks.txt  roadmap_tasks.txt
(+240 files in other folders)
